--- a/src/app/farmer/farmer-editproduct/farmer-editproduct.component.html
+++ b/src/app/farmer/farmer-editproduct/farmer-editproduct.component.html
@@ -6,15 +6,15 @@
 </div>
 
 <!--model-->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false" *ngIf="ActiveAddEditPro">
   <div class="modal-dialog modal-dialog-centered modal-xl">
       <div class="modal-content ">
           <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Title</h5>
+              <h5 class="modal-title" id="exampleModalLabel">{{Modal_title}}</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="closeClick()"></button>
           </div>
           <div class="modal-body">
-              <app-add-product  ></app-add-product>
+              <app-add-product [pro]="pro" *ngIf="ActiveAddEditPro" ></app-add-product>
           </div>
 
       </div>
@@ -34,35 +34,49 @@
       <table class="table table-striped table-hover">
           <thead class="table-dark" style="text-align: center;">
       <tr>
-        <th scope="col">Stock id</th>
+        <!--<th scope="col">Stock id</th>
         <th scope="col">Category</th>
         <th scope="col">Amount in kg</th>
         <th scope="col">Farmer's Price per kg</th>
         <th scope="col">Manufactured Date</th>
         <th scope="col">Discription</th>
         <th scope="col">Updated Time</th>
-        <th scope="col">Delete</th>
+        <th scope="col">Delete</th>-->
+
+        <th>id</th>
+        <th>Category</th>
+        <th>Orders</th>
+        <th>Shiping date</th>
+        <th>Remove</th>
+
+
       </tr>
     </thead>
     <tbody class="align-middle" style="text-align: center;">
-      <tr *ngFor="let dataItem of ProductList">
+      <tr *ngFor="let dataItem of ProductList" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="clickItem(dataItem)">
 
 
-        <td>{{dataItem.vegetableStocksId}}</td>
-
-
+        <!--<td>{{dataItem.vegetableStocksId}}</td>
         <td>{{dataItem.vegetablesId}}</td>
         <td>{{dataItem.amount}}</td>
         <td>{{dataItem.farmers_price_per_kg}}</td>
         <td>{{dataItem.manu_date}}</td>
         <td>{{dataItem.discription}}</td>
-        <td>{{dataItem.updated_Time}}</td>
+        <td>{{dataItem.updated_Time}}</td>-->
+
+        <td>{{dataItem.id}}</td>
+        <td>{{dataItem.category}}</td>
+        <td>{{dataItem.price}}</td>
+        <td>2022-03-12</td>
+
+
         
+      
 
         <td>
          
-      <button class="btn" id="del" >
-        <svg (click)="delete(dataItem)" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" style="margin: 5px;" class="bi bi-trash-fill" viewBox="0 0 16 16">
+      <button class="btn" id="del" data-bs-toggle=" " data-bs-target="#exampleModal" >
+        <svg (click)="delete(dataItem)"  xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" style="margin: 5px;" class="bi bi-trash-fill" viewBox="0 0 16 16">
           <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
         </svg>
       </button>
