finished faremer edit product functions

--- a/src/app/farmer/add-product/add-product.component.html
+++ b/src/app/farmer/add-product/add-product.component.html
@@ -99,22 +99,19 @@
       
 
 
-        <label class="col-sm-3 col-form-label " style="padding: 10px;font-weight:500;">Available Amount in kg   :</label>
-        <label class="col-sm-9 col-form-label" style="padding: 10px;">{{stock}}</label>
+        <label class="col-sm-3 col-form-label " style="padding: 10px;font-weight:500;">Maximum Retail: Price Per kg</label>
+        <label class="col-sm-9 col-form-label" style="padding: 10px;">{{price}}</label>
 
         <label class="col-sm-3 col-form-label " style="padding: 10px;font-weight:500;">Orders                   :</label>
         <label class="col-sm-9 col-form-label" style="padding: 10px;">{{order}}</label>
 
-        <label class="col-sm-3 col-form-label " style="padding: 10px;font-weight:500;">Price per kg in LKR      :</label>
-        <label class="col-sm-9 col-form-label" style="padding: 10px;">{{price}}</label>
-
-       
-        <label class="col-sm-3 col-form-label" style="padding: 10px;font-weight:500;">shiping Date              :</label>
+        
+        <label class="col-sm-3 col-form-label" style="padding: 10px;font-weight:500;">Last Updated: Time          </label>
         <label class="col-sm-9 col-form-label" style="padding: 10px;">{{date}}</label>
 
 
-        <label for="exampleFormControlTextarea1" class="col-sm-3 col-form-label" style="padding: 10px;font-weight:500;">Discription              :</label>
-        <label class="col-sm-9 col-form-label" style="padding: 10px;">{{discription}}</label>
+        <label for="exampleFormControlTextarea1" class="col-sm-3 col-form-label" style="padding: 10px;font-weight:500;">Vegtable image              :</label>
+        <img src={{vegimg}} class="col-sm-3 col-form-label" style="padding: 10px;">
 
         
 
