facilitate farmers stock photo adding and customer order placing

--- a/src/app/customer/customer-nav/customer-nav.component.html
+++ b/src/app/customer/customer-nav/customer-nav.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="/customer">
-        <img src="" alt="" width="30" height="24" class="logo-image">
-        name's customer Account
+        <img src="{{image}}" alt="" width="30" height="24" class="logo-image">
+        {{name}}'s customer Account
       </a>
     
     
