--- a/src/app/farmer/add-product/add-product.component.html
+++ b/src/app/farmer/add-product/add-product.component.html
@@ -65,6 +65,31 @@
            
         </div>
 
+        <div class="row" style="margin: 20px;" >
+       
+            <img src={{image}} alt="AD.png" style="border: solid;border-width: 0.1px; height:200px; width:200px; margin:20px,60px,20px,60px;">
+            <input  style="margin-top: 10px;"type="file"  class="mt-2" accept="image/png, image/gif, image/jpeg" class="form-control " id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload" placeholder="Stock Photo" formControlName="Profile_Photoc" (change)="onChange($event)"
+            [ngClass]="{ 'is-invalid': submitted && f['Profile_Photoc'].errors }">
+    
+            <div *ngIf="submitted && f['Profile_Photoc'].errors" class="invalid-feedback">
+                <div *ngIf="f['Profile_Photoc'].errors['required']">Stock Photo is required</div>
+                <div *ngIf="f['Profile_Photoc'].errors['max']">
+                  Only one photo needed
+                </div>
+                
+                <div *ngIf="f['Profile_Photoc'].errors['maxlength']">
+                  File size is too large.
+                </div>
+              </div>
+        <label class="form-label" for="form3Example1cg">Your Stock Photo</label>
+      </div>
+    
+      <div class="form-group form-outline mb-4" >
+    
+    
+        <textarea   hidden type="text" class="form-control  form-control-lg" value={{image}}  id="form3Example786cg" formControlName="Stock_image"></textarea>
+    </div>
+
         <div class="form-group form-outline mb-4" >
 
 
