--- a/src/app/admin/add-cat/add-cat.component.html
+++ b/src/app/admin/add-cat/add-cat.component.html
@@ -37,7 +37,7 @@
         [ngClass]="{ 'is-invalid': submitted && f['Profile_Photoc'].errors }">
 
         <div *ngIf="submitted && f['Profile_Photoc'].errors" class="invalid-feedback">
-            <div *ngIf="f['Profile_Photoc'].errors['required']">Profile Photo is required</div>
+            <div *ngIf="f['Profile_Photoc'].errors['required']">Vegetable image is required</div>
             <div *ngIf="f['Profile_Photoc'].errors['max']">
               Only one photo needed
             </div>
@@ -46,7 +46,7 @@
               File size is too large.
             </div>
           </div>
-    <label class="form-label" for="form3Example1cg">Your Profile Photo</label>
+    <label class="form-label" for="form3Example1cg">Vegtable image</label>
   </div>
 
   <div class="form-group form-outline mb-4" >
