completed customer functions

--- a/src/app/customer/customer-pro-details/customer-pro-details.component.html
+++ b/src/app/customer/customer-pro-details/customer-pro-details.component.html
@@ -26,7 +26,7 @@
       
 
 
-        <label class="col-sm-3 col-form-label " style="padding: 10px;font-weight:500;">Farmers price per kg</label>
+        <label class="col-sm-3 col-form-label " style="padding: 10px;font-weight:500;">Farmers price per kg in LKR  :</label>
         <label class="col-sm-9 col-form-label" style="padding: 10px;">{{prod.farmers_price_per_kg}}</label>
 
         <label class="col-sm-3 col-form-label " style="padding: 10px;font-weight:500;">Available Amount kg                  :</label>
@@ -36,14 +36,14 @@
         <label class="col-sm-9 col-form-label" style="padding: 10px;">{{prod.discription}}</label>
 
         <label class="col-sm-3 col-form-label " style="padding: 10px;font-weight:500;">Farmer name                 :</label>
-        <label class="col-sm-9 col-form-label" style="padding: 10px;">{{prod.name}}</label>
+        <label class="col-sm-9 col-form-label" style="padding: 10px;" >{{prod.f}}</label>
 
 
         <label class="col-sm-3 col-form-label " style="padding: 10px;font-weight:500;">Phone number                  :</label>
-        <label class="col-sm-9 col-form-label" style="padding: 10px;">{{prod.phone_Number}}</label>
+        <label class="col-sm-9 col-form-label" style="padding: 10px;">{{prod.phoneNumber}}</label>
 
         <label class="col-sm-3 col-form-label " style="padding: 10px;font-weight:500;">Farmer living city                  :</label>
-        <label class="col-sm-9 col-form-label" style="padding: 10px;">{{prod.living_City}}</label>
+        <label class="col-sm-9 col-form-label" style="padding: 10px;">{{prod.living_city}}</label>
 
 
 
