--- a/src/app/customer/customer-cart/customer-cart.component.html
+++ b/src/app/customer/customer-cart/customer-cart.component.html
@@ -24,16 +24,16 @@
     <tbody>
       <tr *ngFor="let item of product">
         <td>{{item.vegetableStocksId}}</td>
-        <td>{{item.name}}</td>
+        <td>{{item.f}}</td>
         <td>{{item.quantity}}</td>
         <td>{{item.total}}</td>
-        <td><button (click)="removeIteam(item)">delet</button></td>
+        <td><button (click)="removeIteam(item)">Delete</button></td>
       </tr>
       <tr>
        
         <td><button class="btn btn-danger" (click)="emptycart()" >Empty cart</button></td>
         <td><button class="btn btn-primary" routerLink="/customer/category-show">Shop more</button></td>
-        <td><button class="btn btn-success" >CheckOut</button></td>
+        <td><button class="btn btn-success" (click)="addorders()">CheckOut</button></td>
         <td>Grand Total :LKR {{grandTotal}}</td>
 
       </tr>
