--- a/src/app/customer/customer-cart/customer-cart.component.html
+++ b/src/app/customer/customer-cart/customer-cart.component.html
@@ -24,7 +24,7 @@
     <tbody>
       <tr *ngFor="let item of product">
         <td>{{item.vegetableStocksId}}</td>
-        <td>{{item.f}}</td>
+        <td>{{item.name}}</td>
         <td>{{item.quantity}}</td>
         <td>{{item.total}}</td>
         <td><button (click)="removeIteam(item)">Delete</button></td>
