--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,4 +1,21 @@
 <app-landing-nav></app-landing-nav>
+
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false" >
+  <div class="modal-dialog modal-dialog-centered modal-xl">
+      <div class="modal-content ">
+          <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Category Details</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="closeClick()"></button>
+          </div>
+          <div class="modal-body">
+              <app-add-product  [pro]="pro" *ngIf="ActiveAddEditPro" ></app-add-product>
+          </div>
+
+      </div>
+  </div>
+</div>
+
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -20,22 +37,27 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+  <div style="display: flex;
+  justify-content: center;
+  align-items: center;">
+    <h1 >Available Vegetables</h1>
+  </div>
   <div class="container ">
     <div class="row">
 
-        <div class="card col-md-3" >
+        <!--<div class="card col-md-3" >
             <div style="text-align: center;">
-                <img src="https://localhost:44305/Photos/All.png">
-                <h5>All product</h5>
+                <img src="https://imgs.search.brave.com/GDbDWO3ienUo61NO-MYPJRhwKTAstFLPOQcB2atz1dg/rs:fit:632:225:1/g:ce/aHR0cHM6Ly90c2Uy/Lm1tLmJpbmcubmV0/L3RoP2lkPU9JUC5q/WDVHdWo1djlUd21S/SGxsbUI1M2F3SGFG/aiZwaWQ9QXBp">
+                <h5>All products</h5>
 
             </div>
-        </div>
+        </div>-->
 
         <ng-container *ngFor="let item of CategoryList "   >
-            <div class="card  col-md-3 bg-light" style="width:250px;position: relative;  align-self: start;" >
+            <div class="card  col-md-3 bg-light" style="width:250px;position: relative;  align-self: start;" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <div style="text-align: center;">
-                    <img src="{{item.image}}">
-                    <h5>{{item.title}}</h5>
+                    <img src="{{item.vegtable_image}}" (click)="Viewcat(item)">
+                    <h5>{{item.name}}</h5>
                 </div>
             </div>
         </ng-container>
@@ -43,3 +65,7 @@
     </div>
 
 </div>
+
+
+
+
