--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -45,25 +45,25 @@
       <div class="card" style="width: 18rem;">
         <img src="assets/delivery.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Fast delivery to your Doorsteps within one day.</p>
         </div>
       </div>
     </div>
 
     <div class="col">
-      <div class="card" style="width: 18rem;">
-        <img src="assets/delivery.jpg" class="card-img-top" alt="...">
+      <div class="card" style="width: 18rem; align-self: center;">
+        <img src="assets/vege.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Guaranteed on the freshness of the Vegetables</p>
         </div>
       </div>
     </div>
 
     <div class="col">
-      <div class="card" style="width: 18rem;">
-        <img src="assets/delivery.jpg" class="card-img-top" alt="...">
+      <div class="card" style="width: 18rem; align-self: flex-end;">
+        <img src="assets/friendly.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Freindly Service</p>
         </div>
       </div>
     </div>
@@ -71,192 +71,7 @@
 
   </div>
 
-         
-      
-      
-      
-  </div>
-  
-  <!-- Container (Portfolio Section) -->
-  <div id="portfolio" class="container-fluid text-center bg-grey">
-    <h2>Portfolio</h2><br>
-    <h4>What we have created</h4>
-    <div class="row text-center slideanim">
-      <div class="col-sm-4">
-        <div class="thumbnail">
-          <img src="paris.jpg" alt="Paris" width="400" height="300">
-          <p><strong>Paris</strong></p>
-          <p>Yes, we built Paris</p>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="thumbnail">
-          <img src="newyork.jpg" alt="New York" width="400" height="300">
-          <p><strong>New York</strong></p>
-          <p>We built New York</p>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="thumbnail">
-          <img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
-          <p><strong>San Francisco</strong></p>
-          <p>Yes, San Fran is ours</p>
-        </div>
-      </div>
-    </div><br>
-    
-    <h2>What our customers say</h2>
-    <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-  
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <h4>"This company is the best. I am so happy with the result!"<br><span>Michael Roe, Vice President, Comment Box</span></h4>
-        </div>
-        <div class="item">
-          <h4>"One word... WOW!!"<br><span>John Doe, Salesman, Rep Inc</span></h4>
-        </div>
-        <div class="item">
-          <h4>"Could I... BE any more happy with this company?"<br><span>Chandler Bing, Actor, FriendsAlot</span></h4>
-        </div>
-      </div>
-  
-      <!-- Left and right controls -->
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div>
-  
-  <!-- Container (Pricing Section) -->
-  <div id="pricing" class="container-fluid">
-    <div class="text-center">
-      <h2>Pricing</h2>
-      <h4>Choose a payment plan that works for you</h4>
-    </div>
-    <div class="row slideanim">
-      <div class="col-sm-4 col-xs-12">
-        <div class="panel panel-default text-center">
-          <div class="panel-heading">
-            <h1>Basic</h1>
-          </div>
-          <div class="panel-body">
-            <p><strong>20</strong> Lorem</p>
-            <p><strong>15</strong> Ipsum</p>
-            <p><strong>5</strong> Dolor</p>
-            <p><strong>2</strong> Sit</p>
-            <p><strong>Endless</strong> Amet</p>
-          </div>
-          <div class="panel-footer">
-            <h3>$19</h3>
-            <h4>per month</h4>
-            <button class="btn btn-lg">Sign Up</button>
-          </div>
-        </div>      
-      </div>     
-      <div class="col-sm-4 col-xs-12">
-        <div class="panel panel-default text-center">
-          <div class="panel-heading">
-            <h1>Pro</h1>
-          </div>
-          <div class="panel-body">
-            <p><strong>50</strong> Lorem</p>
-            <p><strong>25</strong> Ipsum</p>
-            <p><strong>10</strong> Dolor</p>
-            <p><strong>5</strong> Sit</p>
-            <p><strong>Endless</strong> Amet</p>
-          </div>
-          <div class="panel-footer">
-            <h3>$29</h3>
-            <h4>per month</h4>
-            <button class="btn btn-lg">Sign Up</button>
-          </div>
-        </div>      
-      </div>       
-      <div class="col-sm-4 col-xs-12">
-        <div class="panel panel-default text-center">
-          <div class="panel-heading">
-            <h1>Premium</h1>
-          </div>
-          <div class="panel-body">
-            <p><strong>100</strong> Lorem</p>
-            <p><strong>50</strong> Ipsum</p>
-            <p><strong>25</strong> Dolor</p>
-            <p><strong>10</strong> Sit</p>
-            <p><strong>Endless</strong> Amet</p>
-          </div>
-          <div class="panel-footer">
-            <h3>$49</h3>
-            <h4>per month</h4>
-            <button class="btn btn-lg">Sign Up</button>
-          </div>
-        </div>      
-      </div>    
-    </div>
-  </div>
-  
-  <!-- Container (Contact Section) -->
-  <div id="contact" class="container-fluid bg-grey">
-    <h2 class="text-center">CONTACT</h2>
-    <div class="row">
-      <div class="col-sm-5">
-        <p>Contact us and we'll get back to you within 24 hours.</p>
-        <p><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
-        <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
-        <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
-      </div>
-      <div class="col-sm-7 slideanim">
-        <div class="row">
-          <div class="col-sm-6 form-group">
-            <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
-          </div>
-          <div class="col-sm-6 form-group">
-            <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
-          </div>
-        </div>
-        <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
-        <div class="row">
-          <div class="col-sm-12 form-group">
-            <button class="btn btn-default pull-right" type="submit">Send</button>
-          </div>
-        </div>
-      </div>
-    </div>
+        
   </div>
   
   
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  <!-- Image of location/map -->
-  <img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%">
-  
-  <footer class="container-fluid text-center">
-    <a href="#myPage" title="To Top">
-      <span class="glyphicon glyphicon-chevron-up"></span>
-    </a>
-    <p>Bootstrap Theme Made By <a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a></p>
-  </footer>
-
-
-  <button type="button" class="btn btn-primary">Primary</button>
