--- a/src/app/farmer/farmer-navbar/farmer-navbar.component.html
+++ b/src/app/farmer/farmer-navbar/farmer-navbar.component.html
@@ -17,7 +17,7 @@
             <a  class="nav-link "  aria-current="page" routerLink="/farmer/editproduct" >Edit ptoducts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="/contact_us">Delivery</a>
+            <a class="nav-link " href="/farmer/editorder">Orders</a>
           </li>
           <li class="nav-item">
             <a class="nav-link " href="/home">LogOut</a>
