--- a/src/app/customer/customer-nav/customer-nav.component.html
+++ b/src/app/customer/customer-nav/customer-nav.component.html
@@ -23,7 +23,7 @@
                 <a class="nav-link " href="/contact_us">About us</a>
               </li>
             <li class="nav-item">
-                <a class="nav-link " routerLink="/customer/cart">Cart</a>
+                <a class="nav-link  " routerLink="/customer/cart">Cart<sup id="sup1">10</sup></a>
               </li>
             <li class="nav-item">
               <a class="nav-link " href="/home">LogOut</a>
