added admin assign deivery function

--- a/src/app/admin/admin-nav/admin-nav.component.html
+++ b/src/app/admin/admin-nav/admin-nav.component.html
@@ -20,7 +20,7 @@
               <a  class="nav-link "  aria-current="page" routerLink="/admin/editprof" >Edit Profiles</a>
             </li>
             <li class="nav-item">
-                <a  class="nav-link "  aria-current="page" routerLink="/admin/editorders" >Edit Orders</a>
+                <a  class="nav-link "  aria-current="page" routerLink="/admin/editorders" >Assign Couriers</a>
             </li>
             <li class="nav-item">
               <a class="nav-link " href="/home">LogOut</a>
