--- a/src/app/admin/edit-cat/edit-cat.component.html
+++ b/src/app/admin/edit-cat/edit-cat.component.html
@@ -48,11 +48,11 @@
           
           <td>{{dataItem.vegetablesId}}</td>
           <td style="width: 50px;">
-            <img src={{dataItem.vegtable_image}} class="img-fluid img-thumbnail" onload="getadminname(dataItem.adminId)" >
+            <img src={{dataItem.vegtable_image}} class="img-fluid img-thumbnail"  >
           </td>
           <td>{{dataItem.name}}</td>
           <td>{{dataItem.max_control_price_country}}</td>
-          <td >{{aid[0].firstName}}</td>
+          <td >Admin under ID: {{dataItem.adminId}}</td>
           <td>{{dataItem.last_Updated_Time}}</td>
           
   
