--- a/src/app/courier-signup/courier-signup.component.html
+++ b/src/app/courier-signup/courier-signup.component.html
@@ -72,7 +72,7 @@
             <div class="form-group form-outline mb-4" >
        
       
-              <textarea   hidden type="text" class="form-control  form-control-lg" value={{image}}  id="form3Example786cg" formControlName="Profile_Photo"></textarea>
+              <textarea   hidden type="text" class="form-control  form-control-lg" value={{image}}  id="form3Example786cg" formControlName="Vehicle_Photo"></textarea>
           </div>
 
                 
