Updating About Us Page

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -12,7 +12,7 @@
     <div class="row allign-items-center" >
       <div class="col-sm-8" >
         <h2 >Who are we ?</h2><br>
-        <h4>We are a group of undergraduates from the Department of Electrical and Information Engineering, University of Ruhuna.</h4><br>
+        <h4>We are a group of undergraduates from the Department of Electrical and Information Engineering, University of Ruhuna. We shared a vision to make it easier for people to buy and sell vegetables online without having the need to go through a middleman. Which will vastly improve the profits of farmers while reducing the cost to buy vegetables.</h4><br>
       </div>
       <div class="col-sm-4">
         <img src="assets/team.jpg">
@@ -41,7 +41,7 @@
     
       <div class="row">
 
-    <div class="col">
+    <div class="col-sm-4">
       <div class="card" style="width: 18rem;">
         <img src="assets/delivery.jpg" class="card-img-top" alt="...">
         <div class="card-body">
@@ -50,7 +50,7 @@
       </div>
     </div>
 
-    <div class="col">
+    <div class="col-sm-4">
       <div class="card" style="width: 18rem; align-self: center;">
         <img src="assets/vege.jpg" class="card-img-top" alt="...">
         <div class="card-body">
@@ -59,8 +59,8 @@
       </div>
     </div>
 
-    <div class="col">
-      <div class="card" style="width: 18rem; align-self: flex-end;">
+    <div class="col-sm-4">
+      <div class="card" style="width: 18rem;">
         <img src="assets/friendly.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Freindly Service</p>
