Updating About Us Page

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -39,9 +39,9 @@
     
     <br>
     
-      <div class="row">
+      <div class="row " id="row1">
 
-    <div class="col-sm-4">
+    <div class="col-sm-4 d-flex justify-content-around">
       <div class="card" style="width: 18rem;">
         <img src="assets/delivery.jpg" class="card-img-top" alt="...">
         <div class="card-body">
@@ -50,7 +50,7 @@
       </div>
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-4 d-flex justify-content-around">
       <div class="card" style="width: 18rem; align-self: center;">
         <img src="assets/vege.jpg" class="card-img-top" alt="...">
         <div class="card-body">
@@ -59,11 +59,43 @@
       </div>
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-4 d-flex justify-content-around">
       <div class="card" style="width: 18rem;">
         <img src="assets/friendly.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Freindly Service</p>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+
+  <div class="row d-flex justify-content-around" style="justify-content: center; align-content: center; " id="row2">
+
+    <div class="col-sm-4 d-flex justify-content-around" style="justify-content: center; ">
+      <div class="card" style="width: 18rem; text-align: center;">
+        <img src="assets/stocks.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Price controlling according to the maximum retail prices given by the government.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-4 d-flex justify-content-around">
+      <div class="card" style="width: 18rem; align-self: center;">
+        <img src="assets/pred.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Giving predictions for farmers what crop needs to be prioritized based on their sales. </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-4 d-flex justify-content-around">
+      <div class="card" style="width: 18rem;">
+        <img src="assets/diet.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Healthy Diet Plan suggestions for users.</p>
         </div>
       </div>
     </div>
