Updating About Us Page

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -9,7 +9,7 @@
   
   <!-- Container (About Section) -->
   <div id="about" class="container-fluid" >
-    <div class="row allign-items-center" >
+    <div class="row allign-items-center align-items-center" >
       <div class="col-sm-8" >
         <h2 >Who are we ?</h2><br>
         <h4>We are a group of undergraduates from the Department of Electrical and Information Engineering, University of Ruhuna. We shared a vision to make it easier for people to buy and sell vegetables online without having the need to go through a middleman. Which will vastly improve the profits of farmers while reducing the cost to buy vegetables.</h4><br>
@@ -22,7 +22,7 @@
   
   
   <div class="container-fluid " style="background-color: #9ccc65;">
-    <div class="row">
+    <div class="row align-items-center">
       <div class="col-sm-4">
         <img src="assets/goal.jpg">
       </div>
