--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -3,28 +3,26 @@
 
 <section class="ftco-section">
 
-    <div class="container background-color:grey">
-        <div class="row justify-content-center" style="margin: 40px;">
+    <div class="container  "> 
+        <div class="row justify-content-center" style="margin: 50px;">
             <div class="col-md-6 text-center mb-5">
-                <h2 class="heading-section"> Your Opinions matters.</h2>
+                <h2 class="heading-section"> Your Opinion Matters.</h2>
                 <p>Let us know what needs to be developed.</p>
             </div>
         </div>
 
 
-        <div class="row justify-content-center">
+        <div class="row justify-content-center" style="background-color: #ebffeb; border: 2px solid; border-radius:2rem;" >
             <div class="col-md-12">
                 <div class="wrapper">
                     <div class="row no-gutters">
                         <div class="col-lg-8 col-md-7 order-md-last d-flex align-items-stretch">
                             <div class="contact-wrap w-100 p-md-5 p-4">
-                                <h3 class="mb-4">Get in touch</h3>
+                                <h3 class="mb-4" style="text-align: center;">Tell us what you think</h3>
                                 <div id="form-message-warning" class="mb-4"></div> 
-                          <div id="form-message-success" class="mb-4">
-                        Your message was sent, thank you!
-                          </div>
+                         
                                 <form method="POST" id="contactForm" name="contactForm" class="contactForm">
-                                    <div class="row">
+                                    <div class="row" >
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label class="label" for="name">Full Name</label>
@@ -50,7 +48,7 @@
                                             </div>
                                         </div>
                                         <div class="col-md-12">
-                                            <div class="form-group">
+                                            <div class="form-group" style="margin-top:10px">
                                                 <input type="submit" value="Send Message" class="btn btn-primary">
                                                 <div class="submitting"></div>
                                             </div>
@@ -60,15 +58,15 @@
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-5 d-flex align-items-stretch">
-                            <div class="info-wrap bg-primary w-100 p-md-5 p-4">
-                                <h3>Let's get in touch</h3>
+                            <div class="info-wrap w-100 p-md-5 p-4" style="background-color: #69f56e; margin-top: 10px; margin-bottom:10px; border-radius: 2rem;" >
+                                <h3 style="text-align: center;">Contact Us</h3>
                                 <p class="mb-4">We're open for any suggestion or just to have a chat</p>
                         <div class="dbox w-100 d-flex align-items-start">
                             <div class="icon d-flex align-items-center justify-content-center">
                                 <span class="fa fa-map-marker"></span>
                             </div>
                             <div class="text pl-3">
-                            <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+                            <p><span>Address:</span> Faculty of Engineering, University of Ruhuna, Hapugala, Galle.</p>
                           </div>
                       </div>
                         <div class="dbox w-100 d-flex align-items-center">
