Contact Us Page update

--- a/src/app/about-us/about-us.component.css
+++ b/src/app/about-us/about-us.component.css
@@ -180,3 +180,14 @@ footer .glyphicon {
 #row1,#row2{
   margin: 50px;
 }
+
+.gradient-custom {
+  /* fallback for old browsers */
+  background: #1d5727;
+  
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(to right, rgb(62, 102, 44), rgba(37, 117, 252, 1));
+  
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, rgb(36, 88, 44), rgba(37, 117, 252, 1))
+  }
