--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,10 +1,11 @@
 
 <app-landing-nav></app-landing-nav>
 
-<section class="ftco-section">
+
+    <section class="vh-100 gradient-custom ">
 
     <div class="container  "> 
-        <div class="row justify-content-center" style="margin: 50px;">
+        <div class="row justify-content-center">
             <div class="col-md-6 text-center mb-5">
                 <h2 class="heading-section"> Your Opinion Matters.</h2>
                 <p>Let us know what needs to be developed.</p>
