Contact Us Page update

--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -7,8 +7,8 @@
     <div class="container  "> 
         <div class="row justify-content-center">
             <div class="col-md-6 text-center mb-5">
-                <h2 class="heading-section"> Your Opinion Matters.</h2>
-                <p>Let us know what needs to be developed.</p>
+                <h2 class="heading-section" style="color: #fcfcfc;"> Your Opinion Matters.</h2>
+                <p style="color: white;">Let us know what needs to be developed.</p>
             </div>
         </div>
 
@@ -59,7 +59,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-5 d-flex align-items-stretch">
-                            <div class="info-wrap w-100 p-md-5 p-4" style="background-color: #69f56e; margin-top: 10px; margin-bottom:10px; border-radius: 2rem;" >
+                            <div class="info-wrap w-100 p-md-5 p-4" style="background-color: #8c948c; margin-top: 10px; margin-bottom:10px; border-radius: 2rem;" >
                                 <h3 style="text-align: center;">Contact Us</h3>
                                 <p class="mb-4">We're open for any suggestion or just to have a chat</p>
                         <div class="dbox w-100 d-flex align-items-start">
@@ -67,7 +67,7 @@
                                 <span class="fa fa-map-marker"></span>
                             </div>
                             <div class="text pl-3">
-                            <p><span>Address:</span> Faculty of Engineering, University of Ruhuna, Hapugala, Galle.</p>
+                            <p ><span>Address:</span> <a style="color:white ;">Faculty of Engineering, University of Ruhuna, Hapugala, Galle.</a></p>
                           </div>
                       </div>
                         <div class="dbox w-100 d-flex align-items-center">
@@ -75,7 +75,7 @@
                                 <span class="fa fa-phone"></span>
                             </div>
                             <div class="text pl-3">
-                            <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+                            <p><span>Phone:</span> <a href="tel://94 769058946" style="color:white ;">+94 769058946</a></p>
                           </div>
                       </div>
                         <div class="dbox w-100 d-flex align-items-center">
@@ -83,7 +83,7 @@
                                 <span class="fa fa-paper-plane"></span>
                             </div>
                             <div class="text pl-3">
-                            <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+                            <p ><span>Email:</span> <a href="mailto:vegedistro@gmail.com" style="color:white ;">vegedistro@gmail.com</a></p>
                           </div>
                       </div>
                         <div class="dbox w-100 d-flex align-items-center">
@@ -91,7 +91,7 @@
                                 <span class="fa fa-globe"></span>
                             </div>
                             <div class="text pl-3">
-                            <p><span>Website</span> <a href="#">yoursite.com</a></p>
+                            <p><span >Website</span> <a href="#" style="color:white ;">vegedistro.com</a></p>
                           </div>
                       </div>
                   </div>
