Contact Us Page update

--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -67,7 +67,7 @@
                                 <span class="fa fa-map-marker"></span>
                             </div>
                             <div class="text pl-3">
-                            <p ><span>Address:</span> <a style="color:white ;">Faculty of Engineering, University of Ruhuna, Hapugala, Galle.</a></p>
+                            <p ><span>Address:  </span> <a style="color:white ">Faculty of Engineering, University of Ruhuna, Hapugala, Galle.</a></p>
                           </div>
                       </div>
                         <div class="dbox w-100 d-flex align-items-center">
@@ -75,7 +75,7 @@
                                 <span class="fa fa-phone"></span>
                             </div>
                             <div class="text pl-3">
-                            <p><span>Phone:</span> <a href="tel://94 769058946" style="color:white ;">+94 769058946</a></p>
+                            <p><span>Phone:  </span> <a href="tel://94 769058946" style="color:white ;">+94 769058946</a></p>
                           </div>
                       </div>
                         <div class="dbox w-100 d-flex align-items-center">
@@ -83,7 +83,7 @@
                                 <span class="fa fa-paper-plane"></span>
                             </div>
                             <div class="text pl-3">
-                            <p ><span>Email:</span> <a href="mailto:vegedistro@gmail.com" style="color:white ;">vegedistro@gmail.com</a></p>
+                            <p ><span>Email:  </span> <a href="mailto:vegedistro@gmail.com" style="color:white ;">vegedistro@gmail.com</a></p>
                           </div>
                       </div>
                         <div class="dbox w-100 d-flex align-items-center">
@@ -91,7 +91,7 @@
                                 <span class="fa fa-globe"></span>
                             </div>
                             <div class="text pl-3">
-                            <p><span >Website</span> <a href="#" style="color:white ;">vegedistro.com</a></p>
+                            <p><span >Website:  </span> <a href="#" style="color:white ;">vegedistro.com</a></p>
                           </div>
                       </div>
                   </div>
