Contact Us Page update

--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -4,7 +4,7 @@
 
     <section class="vh-100 gradient-custom ">
 
-    <div class="container  "> 
+    <div class="container  " > 
         <div class="row justify-content-center">
             <div class="col-md-6 text-center mb-5">
                 <h2 class="heading-section" style="color: #fcfcfc;"> Your Opinion Matters.</h2>
@@ -13,38 +13,38 @@
         </div>
 
 
-        <div class="row justify-content-center" style="background-color: #ebffeb; border: 2px solid; border-radius:2rem;" >
+        <div class="row justify-content-center" style="background-color: #434443; border: 2px solid; border-radius:2rem;background-color: black;" >
             <div class="col-md-12">
                 <div class="wrapper">
                     <div class="row no-gutters">
                         <div class="col-lg-8 col-md-7 order-md-last d-flex align-items-stretch">
                             <div class="contact-wrap w-100 p-md-5 p-4">
-                                <h3 class="mb-4" style="text-align: center;">Tell us what you think</h3>
+                                <h3 class="mb-4" style="text-align: center; color: white;">Tell us what you think</h3>
                                 <div id="form-message-warning" class="mb-4"></div> 
                          
                                 <form method="POST" id="contactForm" name="contactForm" class="contactForm">
                                     <div class="row" >
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label class="label" for="name">Full Name</label>
+                                                <label class="label" for="name" style="color: white;">Full Name</label>
                                                 <input type="text" class="form-control" name="name" id="name" placeholder="Name">
                                             </div>
                                         </div>
                                         <div class="col-md-6"> 
                                             <div class="form-group">
-                                                <label class="label" for="email">Email Address</label>
+                                                <label class="label" for="email" style="color: white;">Email Address</label>
                                                 <input type="email" class="form-control" name="email" id="email" placeholder="Email">
                                             </div>
                                         </div>
                                         <div class="col-md-12">
                                             <div class="form-group">
-                                                <label class="label" for="subject">Subject</label>
+                                                <label class="label" for="subject" style="color: white;">Subject</label>
                                                 <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject">
                                             </div>
                                         </div>
                                         <div class="col-md-12">
                                             <div class="form-group">
-                                                <label class="label" for="#">Message</label>
+                                                <label class="label" for="#" style="color: white;">Message</label>
                                                 <textarea name="message" class="form-control" id="message" cols="30" rows="4" placeholder="Message"></textarea>
                                             </div>
                                         </div>
