added customer order viewing

--- a/src/app/admin/admin-nav/admin-nav.component.html
+++ b/src/app/admin/admin-nav/admin-nav.component.html
@@ -23,7 +23,7 @@
                 <a  class="nav-link "  aria-current="page" routerLink="/admin/editorders" >Assign Couriers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="/home">LogOut</a>
+              <a class="nav-link " href="/home" (click)="loggout()">LogOut</a>
             </li>
             
           </ul>
