--- a/src/app/customer/customer-nav/customer-nav.component.html
+++ b/src/app/customer/customer-nav/customer-nav.component.html
@@ -16,17 +16,18 @@
             <li class="nav-item">
               <a  class="nav-link "  aria-current="page" routerLink="/customer/category-show" >Buy Now</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link " href="/contact_us">Contact us</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link " href="/contact_us">About us</a>
-              </li>
+           
+          
             <li class="nav-item">
                 <a class="nav-link  " routerLink="/customer/cart">Cart<sup id="sup1">10</sup></a>
               </li>
+
+              <li class="nav-item">
+                <a class="nav-link  " routerLink="/customer/customer_order">Orders<sup id="sup1">{{size}}</sup></a>
+              </li>
+
             <li class="nav-item">
-              <a class="nav-link " href="/home">LogOut</a>
+              <a class="nav-link " href="/home" (click)="loggout()">LogOut</a>
             </li>
             
           </ul>
