--- a/src/app/customer/customer-pro-show/customer-pro-show.component.html
+++ b/src/app/customer/customer-pro-show/customer-pro-show.component.html
@@ -40,7 +40,8 @@
                     <img src="{{item.stock_image}}">
                 </div>
                 <br>
-                <h5 style="text-align: center;">Price Per kg {{item.farmers_price_per_kg}} LKR</h5>
+                <h5 style="text-align: center;">Stock ID:{{item.vegetableStocksId}} </h5>
+                <h5 style="text-align: center;">Price Per kg: {{item.farmers_price_per_kg}} LKR</h5>
 
             </div>
         </ng-container>
