--- a/src/app/farmer/farmer-navbar/farmer-navbar.component.html
+++ b/src/app/farmer/farmer-navbar/farmer-navbar.component.html
@@ -20,7 +20,7 @@
             <a class="nav-link " href="/farmer/editorder">Pending Orders</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="/home">LogOut</a>
+            <a class="nav-link " href="/home" (click)="loggout()">LogOut</a>
           </li>
           
         </ul>
