Update on about us and cart

--- a/src/app/customer/customer-cart/customer-cart.component.html
+++ b/src/app/customer/customer-cart/customer-cart.component.html
@@ -3,7 +3,7 @@
         <h5 class="card-title">My Cart</h5>
     </div>
     <div class="center">
-        <img src="cart.png">
+        <img class="image container-fluid" src="assets/7077465.png">
         <h4>Your cart is empty!</h4>
         <h6>Add item to it now</h6>
         <button class="btn btn-primary" routerLink="/customer/category-show">shop now</button>
